Made a simple change that makes it more like a steering behavior project:
Making the boid unit rotate based on velocity. Had to make a separate component so there's no need to manually do it for all steering behaviors.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Main Project\Scripts\FlyMoveTowardsPlayer.cs" />
      <Compile Include="Assets\Main Project\Scripts\PlayerMove.cs" />
+     <Compile Include="Assets\Main Project\Scripts\Rotate_object_velocity.cs" />
      <Compile Include="Assets\Main Project\Scripts\Steer_Arrive.cs" />
      <Compile Include="Assets\Main Project\Scripts\Steer_Evade.cs" />
      <Compile Include="Assets\Main Project\Scripts\Steer_Flee.cs" />
